user-registeration/metadata/unpackaged/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Opp_Notes__c</fullName>
        <inlineHelpText>Enter a description of the relationship and the contract</inlineHelpText>
        <label>Project Description</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Procore_Project_ID__c</fullName>
        <description>This store the Procore Project ID from related project</description>
        <label>Procore Project ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Installation_Types__c</fullName>
        <description>used with Roll Up Helper. Converted to a picklist on 8/20/18 from a text field. Works with related field on Project</description>
        <inlineHelpText>Sync from Pricing Request if avaialble. If no pricing request, fill in the proposed product type</inlineHelpText>
        <label>Product Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Tilt Ground</fullName>
                </value>
                <value>
                    <fullName>Single Axis Tracker</fullName>
                </value>
                <value>
                    <fullName>Standalone Storage</fullName>
                </value>
                <value>
                    <fullName>Energy Storage</fullName>
                </value>
                <value>
                    <fullName>Floating Solar</fullName>
                </value>
                <value>
                    <fullName>Landfill</fullName>
                </value>
                <value>
                    <fullName>Dual Use/Ag Canopy</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>Wind</fullName>
                </value>
                <value>
                    <fullName>SSS</fullName>
                </value>
                <value>
                    <fullName>Roof</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Tracker</fullName>
                </value>
                <value>
                    <fullName>AC Coupled Storage</fullName>
                </value>
                <value>
                    <fullName>DC Coupled Storage</fullName>
                </value>
                <value>
                    <fullName>Carport</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Accounting Variable with filter for Variable 3 and Record Type</description>
        <label>Team</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Opportunity Team value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>